// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator render available 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
  className="sui-box emotion-0"
  status="available"
/>
`;

exports[`StatusIndicator render creating 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="creating"
/>
`;

exports[`StatusIndicator render deleting 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="deleting"
/>
`;

exports[`StatusIndicator render deployed 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
  className="sui-box emotion-0"
  status="deployed"
/>
`;

exports[`StatusIndicator render disf_full 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
  className="sui-box emotion-0"
  status="disf_full"
/>
`;

exports[`StatusIndicator render error 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
  className="sui-box emotion-0"
  status="error"
/>
`;

exports[`StatusIndicator render locked 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
  className="sui-box emotion-0"
  status="locked"
/>
`;

exports[`StatusIndicator render pending 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="pending"
/>
`;

exports[`StatusIndicator render ready 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
  className="sui-box emotion-0"
  status="ready"
/>
`;

exports[`StatusIndicator render running 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
  className="sui-box emotion-0"
  status="running"
/>
`;

exports[`StatusIndicator render snapshotting 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="snapshotting"
/>
`;

exports[`StatusIndicator render starting 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="starting"
/>
`;

exports[`StatusIndicator render stopped 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #b2b6c3;
}

<div
  className="sui-box emotion-0"
  status="stopped"
/>
`;

exports[`StatusIndicator render stopped_in_place 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ff8c69;
}

<div
  className="sui-box emotion-0"
  status="stopped_in_place"
/>
`;

exports[`StatusIndicator render stopping 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="stopping"
/>
`;

exports[`StatusIndicator render unavailable 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
  className="sui-box emotion-0"
  status="unavailable"
/>
`;

exports[`StatusIndicator render unknow 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
  className="sui-box emotion-0"
  status="unknow"
/>
`;

exports[`StatusIndicator render updating 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="updating"
/>
`;

exports[`StatusIndicator render warning 1`] = `
.emotion-0 {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
  -webkit-animation: flash linear 1s infinite;
  animation: flash linear 1s infinite;
}

<div
  className="sui-box emotion-0"
  status="warning"
/>
`;
